katars/tests/snaps/snapshots/snap_errors__span_chained_attr.snap
---
source: katars/tests/snaps/errors.rs
expression: "helpers::run_error(\"kind P { x: Int }\\nlet p = P { x: 1 }\\np.x.y\")"
---
Error: cannot access '.y' on Int
   ╭─[<test>:3:1]
   │
 3 │ p.x.y
   │ ──┬──  
   │   ╰──── cannot access '.y' on Int
───╯
